# scClone2DR_publication

./: README.md
data/civic/2025-04-01/: 01-Apr-2025-ClinicalEvidenceSummaries.tsv  01-Apr-2025-MolecularProfileSummaries.tsv  01-Apr-2025-VariantSummaries.tsv  01-Apr-2025_per_drug_gene_lists.tsv
data/gene_annotation/: Homo_sapiens.GRCh38.111.gene_info.csv
data/oncokb/: cancerGeneList.tsv
package/: INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py  tutorial_scClone2DR.ipynb
package/data/: generate_fake_data.ipynb
package/experiments/: simu_benchmarking.ipynb  simu_fold_change_obs_pred_gt.ipynb
package/scClone2DR/: __init__.py  utils.py
package/scClone2DR/datasets/: basedataset.py  realdata.py  simulateddata.py
package/scClone2DR/models/: __init__.py
package/scClone2DR/models/scClone2DR/: scClone2DR.py
package/scClone2DR/resultanalysis/: __init__.py  computestatistics.py  visualization.py
package/scClone2DR/trainers/: trainer.py
scripts/: 2026-01-09_compare_gsea_melanoma_models_delta_LOR_selective.qmd
